change folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # compiled outputs
-/node_modules
+backend/MS-Authentication/node_modules
+backend/MS-Course-Management/node_modules
+backend/MS-Learner/node_modules
+backend/MS-Notification/node_modules
+backend/MS-Payment/node_modules
+frontend/node_modules
 
 # Environment file
 .env
