--- a/backend/MS-Authentication/package.json
+++ b/backend/MS-Authentication/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.4",
+    "argon2": "^0.40.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
