--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "react-bootstrap": "^2.10.2",
