--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ backend/MS-Learner/node_modules
 backend/MS-Notification/node_modules
 backend/MS-Payment/node_modules
 backend/Server/node_modules
+backend/API-Gateway/node_modules
 frontend/node_modules
 
 # Environment file
