--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,11 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
-    "react-bootstrap": "^2.10.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
